syntax = "proto3";
package signer;

service Signer {

  rpc SignWithKey (SignWithKeyRequest) returns (SignWithKeyResponse);

}

message SignWithKeyRequest {

  bytes pubKey = 1;
  bytes msEssence = 2;

}

message SignWithKeyResponse {

  bytes signature = 1;

}
